--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,83 +8,45 @@ body {
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 240 10% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
-    --primary: 240 5.9% 10%;
+    --background: 203 61% 6%;
+    --background-secondary: 202 63% 10%;
+    --foreground: 0 0% 98%;
+    --card: 203 61% 6%;
+    --card-foreground: 0 0% 98%;
+    --popover: 203 61% 6%;
+    --popover-foreground: 0 0% 98%;
+    --primary: 195 69% 45%;
     --primary-foreground: 0 0% 98%;
-    --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
-    --muted: 240 4.8% 95.9%;
+    --secondary: 200 64% 23%;
+    --secondary-foreground: 0 0% 98%;
+    --muted: 200 64% 23%;
     --muted-foreground: 240 3.8% 46.1%;
-    --accent: 240 4.8% 95.9%;
-    --accent-foreground: 240 5.9% 10%;
+    --accent: 200 64% 23%;
+    --accent-foreground: 0 0% 98%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
-    --border: 240 5.9% 90%;
-    --input: 240 5.9% 90%;
-    --ring: 240 10% 3.9%;
+    --border: 198 64% 31%;
+    --input: 198 64% 31%;
+    --ring: 199 65% 27%;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
-    --sidebar-background: 0 0% 98%;
-    --sidebar-foreground: 240 5.3% 26.1%;
-    --sidebar-primary: 240 5.9% 10%;
+    --sidebar-background: 202 63% 10%;
+    --sidebar-foreground: 0 0% 98%;
+    --sidebar-primary: 195 69% 45%;
     --sidebar-primary-foreground: 0 0% 98%;
-    --sidebar-accent: 240 4.8% 95.9%;
-    --sidebar-accent-foreground: 240 5.9% 10%;
-    --sidebar-border: 220 13% 91%;
-    --sidebar-ring: 217.2 91.2% 59.8%;
-    --color-1: 0 100% 63%;
-    --color-2: 270 100% 63%;
-    --color-3: 210 100% 63%;
-    --color-4: 195 100% 63%;
-    --color-5: 90 100% 63%;
-  }
-  .dark {
-    --background: 240 10% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 240 10% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 240 10% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 240 5.9% 10%;
-    --secondary: 240 3.7% 15.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 240 3.7% 15.9%;
-    --muted-foreground: 240 5% 64.9%;
-    --accent: 240 3.7% 15.9%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 240 3.7% 15.9%;
-    --input: 240 3.7% 15.9%;
-    --ring: 240 4.9% 83.9%;
-    --chart-1: 220 70% 50%;
-    --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%;
-    --sidebar-background: 240 5.9% 10%;
-    --sidebar-foreground: 240 4.8% 95.9%;
-    --sidebar-primary: 224.3 76.3% 48%;
-    --sidebar-primary-foreground: 0 0% 100%;
-    --sidebar-accent: 240 3.7% 15.9%;
-    --sidebar-accent-foreground: 240 4.8% 95.9%;
-    --sidebar-border: 240 3.7% 15.9%;
-    --sidebar-ring: 217.2 91.2% 59.8%;
-    --color-1: 0 100% 63%;
-    --color-2: 270 100% 63%;
-    --color-3: 210 100% 63%;
-    --color-4: 195 100% 63%;
-    --color-5: 90 100% 63%;
+    --sidebar-accent: 200 64% 23%;
+    --sidebar-accent-foreground: 0 0% 98%;
+    --sidebar-border: 198 64% 31%;
+    --sidebar-ring: 199 65% 27%;
+    --color-1: 195 69% 45%;
+    --color-2: 197 67% 36%;
+    --color-3: 199 65% 27%;
+    --color-4: 200 64% 18%;
+    --color-5: 202 63% 10%;
   }
 }
 
@@ -96,3 +58,33 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+/* Color palette */
+/* 
+  --blue-50: 195 69% 45%;
+  --blue-100: 196 68% 40%;
+  --blue-200: 197 67% 36%;
+  --blue-300: 198 64% 31%;
+  --blue-400: 199 65% 27%;
+  --blue-500: 200 64% 23%;
+  --blue-600: 200 64% 18%;
+  --blue-700: 201 63% 14%;
+  --blue-800: 202 63% 10%;
+  --blue-900: 203 61% 6%;
+  --blue-950: 0 0% 0%;
+*/
+
+/* Gray */
+/* 
+  --gray-50: 0 0% 98%;
+  --gray-100: 240 5% 96%;
+  --gray-200: 240 6% 90%;
+  --gray-300: 240 5% 84%;
+  --gray-400: 240 5% 65%;
+  --gray-500: 240 4% 46%;
+  --gray-600: 240 5% 34%;
+  --gray-700: 240 5% 26%;
+  --gray-800: 240 4% 16%;
+  --gray-900: 240 6% 10%;
+  --gray-950: 0 0% 7%;
+*/
